k8s/cloud_monitoring/base/gke_prometheus_operator.yaml
# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# NOTE: This file is autogenerated.
# yamllint disable

apiVersion: v1
kind: Namespace
metadata:
  name: gmp-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: gmp-public
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: gmp-system
  name: gmp-operator
  labels:
    app: managed-prometheus-operator
    app.kubernetes.io/name: gmp-operator
    app.kubernetes.io/component: operator
    app.kubernetes.io/part-of: gmp
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gmp-operator
      app.kubernetes.io/component: operator
      app.kubernetes.io/part-of: gmp
  template:
    metadata:
      labels:
        app: managed-prometheus-operator
        app.kubernetes.io/name: gmp-operator
        app.kubernetes.io/component: operator
        app.kubernetes.io/part-of: gmp
    spec:
      serviceAccountName: operator
      containers:
      - name: operator
        image: gke.gcr.io/prometheus-engine/operator:v0.3.1-gke.0
        args:
        - "--public-namespace=gmp-public"
        - "--priority-class=gmp-critical"
        - "--image-collector=gke.gcr.io/prometheus-engine/prometheus:v2.28.1-gmp.5-gke.0"
        - "--image-config-reloader=gke.gcr.io/prometheus-engine/config-reloader:v0.3.1-gke.0"
        - "--image-rule-evaluator=gke.gcr.io/prometheus-engine/rule-evaluator:v0.3.1-gke.0"
        ports:
        - name: webhook
          # Note this should match the --listen-addr flag passed in to the operator args.
          # Default is 8443.
          containerPort: 8443
        - name: metrics
          # Note this should match the --metrics-addr flag passed in to the operator args.
          # Default is 18080.
          containerPort: 18080
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          capabilities:
            drop:
            - all
          runAsUser: 1000
          runAsGroup: 1000
---
apiVersion: v1
kind: Service
metadata:
  namespace: gmp-system
  name: gmp-operator
spec:
  selector:
    app.kubernetes.io/name: gmp-operator
    app.kubernetes.io/component: operator
    app.kubernetes.io/part-of: gmp
  ports:
  - protocol: TCP
    port: 8443
    targetPort: webhook
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: gmp-operator.gmp-system.monitoring.googleapis.com
webhooks:
- name: validate.podmonitorings.gmp-operator.gmp-system.monitoring.googleapis.com
  admissionReviewVersions:
  - v1
  clientConfig:
    # caBundle populated by operator.
    service:
      namespace: gmp-system
      name: gmp-operator
      path: /validate/monitoring.googleapis.com/v1alpha1/podmonitorings
      port: 8443
  failurePolicy: Fail
  sideEffects: None
  rules:
  - apiGroups:
    - monitoring.googleapis.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - podmonitorings
- name: validate.clusterpodmonitorings.gmp-operator.gmp-system.monitoring.googleapis.com
  admissionReviewVersions:
  - v1
  clientConfig:
    # caBundle populated by operator.
    service:
      namespace: gmp-system
      name: gmp-operator
      path: /validate/monitoring.googleapis.com/v1alpha1/clusterpodmonitorings
      port: 8443
  failurePolicy: Fail
  sideEffects: None
  rules:
  - apiGroups:
    - monitoring.googleapis.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - clusterpodmonitorings
- name: validate.rules.gmp-operator.gmp-system.monitoring.googleapis.com
  admissionReviewVersions:
  - v1
  clientConfig:
    # caBundle populated by operator.
    service:
      namespace: gmp-system
      name: gmp-operator
      path: /validate/monitoring.googleapis.com/v1alpha1/rules
      port: 8443
  failurePolicy: Fail
  sideEffects: None
  rules:
  - apiGroups:
    - monitoring.googleapis.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - rules
- name: validate.clusterrules.gmp-operator.gmp-system.monitoring.googleapis.com
  admissionReviewVersions:
  - v1
  clientConfig:
    # caBundle populated by operator.
    service:
      namespace: gmp-system
      name: gmp-operator
      path: /validate/monitoring.googleapis.com/v1alpha1/clusterrules
      port: 8443
  failurePolicy: Fail
  sideEffects: None
  rules:
  - apiGroups:
    - monitoring.googleapis.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - clusterrules
- name: validate.globalrules.gmp-operator.gmp-system.monitoring.googleapis.com
  admissionReviewVersions:
  - v1
  clientConfig:
    # caBundle populated by operator.
    service:
      namespace: gmp-system
      name: gmp-operator
      path: /validate/monitoring.googleapis.com/v1alpha1/globalrules
      port: 8443
  failurePolicy: Fail
  sideEffects: None
  rules:
  - apiGroups:
    - monitoring.googleapis.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - globalrules
- name: validate.operatorconfigs.gmp-operator.gmp-system.monitoring.googleapis.com
  admissionReviewVersions:
  - v1
  clientConfig:
    # caBundle populated by operator.
    service:
      namespace: gmp-system
      name: gmp-operator
      path: /validate/monitoring.googleapis.com/v1alpha1/operatorconfigs
      port: 8443
  failurePolicy: Fail
  sideEffects: None
  rules:
  - apiGroups:
    - monitoring.googleapis.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - operatorconfigs
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: gmp-operator.gmp-system.monitoring.googleapis.com
webhooks:
- name: default.podmonitorings.gmp-operator.gmp-system.monitoring.googleapis.com
  admissionReviewVersions:
  - v1
  clientConfig:
    # caBundle populated by operator.
    service:
      namespace: gmp-system
      name: gmp-operator
      path: /default/monitoring.googleapis.com/v1alpha1/podmonitorings
      port: 8443
  failurePolicy: Fail
  sideEffects: None
  rules:
  - apiGroups:
    - monitoring.googleapis.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - podmonitorings
- name: default.clusterpodmonitorings.gmp-operator.gmp-system.monitoring.googleapis.com
  admissionReviewVersions:
  - v1
  clientConfig:
    # caBundle populated by operator.
    service:
      namespace: gmp-system
      name: gmp-operator
      path: /default/monitoring.googleapis.com/v1alpha1/clusterpodmonitorings
      port: 8443
  failurePolicy: Fail
  sideEffects: None
  rules:
  - apiGroups:
    - monitoring.googleapis.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - clusterpodmonitorings

# yamllint enable
